# mkdocs-material-tutorial

./: .env.example  .gitignore  404.html  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  opencode.jsonc  pyproject.toml  ralph-once.sh  sitemap.xml
.opencode/plugins/: block-dangerous-git.ts
admonition/: index.html
code-examples/: index.html
content-tabs/: index.html
diagram-examples/: index.html
docs/: admonition.md  code-examples.md  content-tabs.md  diagram-examples.md
docs/standards/: infrastructure.md  python.md  testing.md
search/: search_index.json
