[project]
name = "template"
version = "0.1.0"
description = "Copier template maintainer workspace (excluded from generated projects)"
requires-python = ">=3.12.6"
dependencies = [
    "mkdocs-material>=9.7.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12",
    "pyright>=1.1",
    "pytest>=8",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "N"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingImports = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
